[tool.poetry]
name = "Phana's Loopster"
version = "0.1.0"
description = "A small Python program that helps you easily loop music for RPG Maker."
authors = ["Phanabani <phanabani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
